09-monitoring/grafana/06-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.optavim.corp`)
      kind: Rule
      services:
        - name: grafana
          namespace: monitoring
          port: 3000
  tls:
    secretName: optavim-wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.optavim.corp`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: ingress
      services:
        - name: grafana
          namespace: monitoring
          port: 3000
